--- a/Mesa01/Views/Shared/_Layout.cshtml
+++ b/Mesa01/Views/Shared/_Layout.cshtml
@@ -34,6 +34,8 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                     <li><a asp-area="" asp-controller="Fechamentos" asp-action="Index">Fechamento</a></li>
+                    <li><a asp-area="" asp-controller="Departamentos" asp-action="Index">Departamentos</a></li>
+                    <li><a asp-area="" asp-controller="Operadores" asp-action="Index">Operadores</a></li>
                 </ul>
             </div>
         </div>
