Foreign key not null (referential integrity)

--- a/Mesa01/Views/Operadores/Index.cshtml
+++ b/Mesa01/Views/Operadores/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Mesa01.Models.Operador>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Operadores";
 }
 
 <h2>Index</h2>
