OperadorFormViewModel and Departamento select component

--- a/Mesa01/Views/Operadores/Details.cshtml
+++ b/Mesa01/Views/Operadores/Details.cshtml
@@ -34,6 +34,12 @@
         <dd>
             @Html.DisplayFor(model => model.BaseSalary)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Departamento)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Departamento)
+        </dd>
     </dl>
 </div>
 <div>
