--- a/Mesa01/Views/Operadores/Create.cshtml
+++ b/Mesa01/Views/Operadores/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Mesa01.Models.Operador
+﻿@model Mesa01.Models.ViewModels.OperadorFormViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -13,24 +13,29 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Nome" class="control-label"></label>
-                <input asp-for="Nome" class="form-control" />
-                <span asp-validation-for="Nome" class="text-danger"></span>
+                <label asp-for="Operador.Nome" class="control-label"></label>
+                <input asp-for="Operador.Nome" class="form-control" />
+                <span asp-validation-for="Operador.Nome" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
+                <label asp-for="Operador.Email" class="control-label"></label>
+                <input asp-for="Operador.Email" class="form-control" />
+                <span asp-validation-for="Operador.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="BirthDate" class="control-label"></label>
-                <input asp-for="BirthDate" class="form-control" />
-                <span asp-validation-for="BirthDate" class="text-danger"></span>
+                <label asp-for="Operador.BirthDate" class="control-label"></label>
+                <input asp-for="Operador.BirthDate" class="form-control" />
+                <span asp-validation-for="Operador.BirthDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="BaseSalary" class="control-label"></label>
-                <input asp-for="BaseSalary" class="form-control" />
-                <span asp-validation-for="BaseSalary" class="text-danger"></span>
+                <label asp-for="Operador.BaseSalary" class="control-label"></label>
+                <input asp-for="Operador.BaseSalary" class="form-control" />
+                <span asp-validation-for="Operador.BaseSalary" class="text-danger"></span>
+            </div>
+            <div class="form-group"> <!--esse bloco é o componente que vai montar a caixinha de seleção da lista de departamentos -->
+                <label asp-for="Operador.DepartamentoId" class="control-label"></label>
+                <!--esse tag select é que vai montar a caixinha de seleção, o tag asp-items é que vai criar as opções a partir de uma lista-->
+                <select asp-for="Operador.DepartamentoId" asp-items="@(new SelectList(Model.Departamentos,"Id","Nome"))" class="form-control"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
