--- a/Mesa01/Views/Operadores/Delete.cshtml
+++ b/Mesa01/Views/Operadores/Delete.cshtml
@@ -35,6 +35,12 @@
         <dd>
             @Html.DisplayFor(model => model.BaseSalary)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Departamento)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Departamento)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
