--- a/Mesa01/Views/Operadores/Edit.cshtml
+++ b/Mesa01/Views/Operadores/Edit.cshtml
@@ -34,6 +34,11 @@
                 <span asp-validation-for="BaseSalary" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Departamento" class="control-label"></label>
+                <input asp-for="Departamento" class="form-control" />
+                <span asp-validation-for="Departamento" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </form>
