--- a/Mesa01/Views/Operadores/Details.cshtml
+++ b/Mesa01/Views/Operadores/Details.cshtml
@@ -38,11 +38,11 @@
             @Html.DisplayNameFor(model => model.Departamento)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Departamento)
+            @Html.DisplayFor(model => model.Departamento.Nome)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-default">Edit</a> <!--comando para mudar para botão: class="btn btn-default" -->
     <a asp-action="Index">Back to List</a>
 </div>
