--- a/Mesa01/Views/Operadores/Edit.cshtml
+++ b/Mesa01/Views/Operadores/Edit.cshtml
@@ -1,42 +1,43 @@
-﻿@model Mesa01.Models.Operador
+﻿@model Mesa01.Models.ViewModels.OperadorFormViewModel
 
 @{
     ViewData["Title"] = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>@ViewData["Title"]</h2>
 
 <h4>Operador</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
+            <input type="hidden" asp-for="Operador.Id" /> <!--criamos um campo oculto(hidden) com o Id do Operador-->
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="Nome" class="control-label"></label>
-                <input asp-for="Nome" class="form-control" />
-                <span asp-validation-for="Nome" class="text-danger"></span>
+                <label asp-for="Operador.Nome" class="control-label"></label>
+                <input asp-for="Operador.Nome" class="form-control" />
+                <span asp-validation-for="Operador.Nome" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
+                <label asp-for="Operador.Email" class="control-label"></label>
+                <input asp-for="Operador.Email" class="form-control" />
+                <span asp-validation-for="Operador.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="BirthDate" class="control-label"></label>
-                <input asp-for="BirthDate" class="form-control" />
-                <span asp-validation-for="BirthDate" class="text-danger"></span>
+                <label asp-for="Operador.BirthDate" class="control-label"></label>
+                <input asp-for="Operador.BirthDate" class="form-control" />
+                <span asp-validation-for="Operador.BirthDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="BaseSalary" class="control-label"></label>
-                <input asp-for="BaseSalary" class="form-control" />
-                <span asp-validation-for="BaseSalary" class="text-danger"></span>
+                <label asp-for="Operador.BaseSalary" class="control-label"></label>
+                <input asp-for="Operador.BaseSalary" class="form-control" />
+                <span asp-validation-for="Operador.BaseSalary" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Departamento" class="control-label"></label>
-                <input asp-for="Departamento" class="form-control" />
-                <span asp-validation-for="Departamento" class="text-danger"></span>
+                <!--esse bloco é o componente que vai montar a caixinha de seleção da lista de departamentos -->
+                <label asp-for="Operador.DepartamentoId" class="control-label"></label>
+                <!--esse tag select é que vai montar a caixinha de seleção, o tag asp-items é que vai criar as opções a partir de uma lista-->
+                <select asp-for="Operador.DepartamentoId" asp-items="@(new SelectList(Model.Departamentos,"Id","Nome"))" class="form-control"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
