--- a/Mesa01/Views/Operadores/Create.cshtml
+++ b/Mesa01/Views/Operadores/Create.cshtml
@@ -11,11 +11,12 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <!-- o framework criou as mensagens de erro de validação assim: <div asp-validation-summary="ModelOnly" class="text-danger"></div>  -->
+            <div asp-validation-summary="All" class="text-danger"></div> <!-- e alteramos para "All" -->
             <div class="form-group">
                 <label asp-for="Operador.Nome" class="control-label"></label>
                 <input asp-for="Operador.Nome" class="form-control" />
-                <span asp-validation-for="Operador.Nome" class="text-danger"></span>
+                <span asp-validation-for="Operador.Nome" class="text-danger"></span> <!-- o framework criou as mensagens de erro de validação no sumario e tambem embaixo de cada campo -->
             </div>
             <div class="form-group">
                 <label asp-for="Operador.Email" class="control-label"></label>
@@ -32,7 +33,8 @@
                 <input asp-for="Operador.BaseSalary" class="form-control" />
                 <span asp-validation-for="Operador.BaseSalary" class="text-danger"></span>
             </div>
-            <div class="form-group"> <!--esse bloco é o componente que vai montar a caixinha de seleção da lista de departamentos -->
+            <div class="form-group">
+                <!--esse bloco é o componente que vai montar a caixinha de seleção da lista de departamentos -->
                 <label asp-for="Operador.DepartamentoId" class="control-label"></label>
                 <!--esse tag select é que vai montar a caixinha de seleção, o tag asp-items é que vai criar as opções a partir de uma lista-->
                 <select asp-for="Operador.DepartamentoId" asp-items="@(new SelectList(Model.Departamentos,"Id","Nome"))" class="form-control"></select>
@@ -50,4 +52,4 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+} <!-- esse macete já criado pelo framework permite que as validações de erros sejam feitas no java script do usuario-->
