--- a/Mesa01/Views/Shared/_Layout.cshtml
+++ b/Mesa01/Views/Shared/_Layout.cshtml
@@ -36,6 +36,8 @@
                     <li><a asp-area="" asp-controller="Fechamentos" asp-action="Index">Fechamento</a></li>
                     <li><a asp-area="" asp-controller="Departamentos" asp-action="Index">Departamentos</a></li>
                     <li><a asp-area="" asp-controller="Operadores" asp-action="Index">Operadores</a></li>
+                    <li><a asp-area="" asp-controller="SalesRecords" asp-action="Index">Operações</a></li>
+
                 </ul>
             </div>
         </div>
