Create Tipo Entitie and the Table in DB

--- a/Mesa01/Views/Shared/_Layout.cshtml
+++ b/Mesa01/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                     <li><a asp-area="" asp-controller="Departamentos" asp-action="Index">Departamentos</a></li>
                     <li><a asp-area="" asp-controller="Operadores" asp-action="Index">Operadores</a></li>
                     <li><a asp-area="" asp-controller="SalesRecords" asp-action="Index">Operações</a></li>
-
+                    <li><a asp-area="" asp-controller="Tipos" asp-action="Index">Tipos</a></li>
                 </ul>
             </div>
         </div>
