--- a/Mesa01/Views/Operadores/Index.cshtml
+++ b/Mesa01/Views/Operadores/Index.cshtml
@@ -24,6 +24,14 @@
             <th>
                 @Html.DisplayNameFor(model => model.BaseSalary)
             </th>
+
+
+            <th>
+                @Html.DisplayNameFor(model => model.Departamento)
+            </th>
+
+
+
             <th></th>
         </tr>
     </thead>
@@ -42,6 +50,16 @@
             <td>
                 @Html.DisplayFor(modelItem => item.BaseSalary)
             </td>
+
+
+
+            <td>
+                @Html.DisplayFor(modelItem => item.DepartamentoId)
+            </td>
+
+
+
+
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
