--- a/Mesa01/Views/SalesRecords/SimpleSearch.cshtml
+++ b/Mesa01/Views/SalesRecords/SimpleSearch.cshtml
@@ -62,10 +62,10 @@
                             @Html.DisplayFor(modelItem => item.Data)
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.Operador)
+                            @Html.DisplayFor(modelItem => item.Operador.Nome)
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.Operador.Departamento)
+                            @Html.DisplayFor(modelItem => item.Operador.Departamento.Nome)
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.Valor)
@@ -75,7 +75,7 @@
                         </td>
                     </tr>
                 }
-            </tbody>foreach
+            </tbody>
         </table>
     </div>
 </div>
